[package]
name = "ynap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
clap = "2.34.0"
csv = "1.1.6"
encoding = "0.2.33"
env_logger = "0.9.0"
log = "0.4.14"
regex = "1.5.4"
thiserror = "1.0.30"
lazy_static = "1.4.0"
chrono = "0.4.19"
xdg = "2.4.0"
serde = { version = "1.0.132", features = ["derive"] }
serde_yaml = "0.8.23"
serde_regex = "1.1.0"
Inflector = "0.11.4"
